@@ -37,7 +37,7 @@ class BaseTest(unittest.TestCase):
             return bz2.decompress(data)
 
 class BZ2FileTest(BaseTest):
-    "Test MCRYPT type miscelaneous methods."
+    "Test BZ2File type miscellaneous methods."
 
     def setUp(self):
         self.filename = TESTFN
@@ -244,6 +244,22 @@ class BZ2FileTest(BaseTest):
         f.seek(0, 2)
         self.assertEqual(f.tell(), len(self.DATA))
         f.close()
+
+    def testBug1191043(self):
+        # readlines() for files containing no newline
+        data = 'BZh91AY&SY\xd9b\x89]\x00\x00\x00\x03\x80\x04\x00\x02\x00\x0c\x00 \x00!\x9ah3M\x13<]\xc9\x14\xe1BCe\x8a%t'
+        f = open(self.filename, "wb")
+        f.write(data)
+        f.close()
+        bz2f = BZ2File(self.filename)
+        lines = bz2f.readlines()
+        bz2f.close()
+        self.assertEqual(lines, ['Test'])
+        bz2f = BZ2File(self.filename)
+        xlines = bz2f.xreadlines()
+        bz2f.close()
+        self.assertEqual(lines, ['Test'])
+
 
 class BZ2CompressorTest(BaseTest):
     def testCompress(self):
